# AIMBOT

./: .gitignore  README.md  check_torchreid.py  list_models.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  BASELINE.md  INSTALL.md  PLAN_COMPLETION.md  REFRACTOR_DECISIONS.md  STYLE_GUIDE.md
scripts/: run_pipeline.py
src/adapters/: __init__.py  video_source.py
src/app/: __init__.py
src/control/: gimbal_controller.py  pid.py  target_controller.py
src/core/: __init__.py  config.py
src/detection/: detector.py
src/pipeline/: workers.py
src/reid/: osnet.py
src/services/: __init__.py  tracking_service.py
src/tracking/: byte_tracker.py  reid_strategy.py
src/ui/: viewer.py
